--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LG화학</title>
+    <link rel="shortcut icon" href="./images/favicon.png">
+
+
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./js/swiper.min.js"></script>
+    <script src="./js/custom.js" defer></script>
 </head>
 
-<link rel="stylesheet" href="./css/reset.css">
-<link rel="stylesheet" href="./css/swiper.min.css">
-<link rel="stylesheet" href="./css/style.css">
-
-<script src="./js/jquery-1.12.4.min.js"></script>
-<script src="./js/swiper.min.js"></script>
-<script src="./js/custom.js" defer></script>
 
 
 <body>
